# MIBRR

./: .gitignore  00_ToDo.txt  02_notes.txt  CHANGELOG.md  Notes.md  Notes.txt  README.md  ToDo.md  buildPackages-cluster.R  buildPackages.R  buildPackages.R~  buildPackagesDebug.R  buildPackagesDebug.R~  buildPackagesTest.R  gibbsOut.rds  gibbsOut2.rds  mcemDebugNotes.md  mibrrExampleData.csv  moreChainsNotes.md  test.txt  testBenBl.R
archive/: mangled_subroutines.R  mibrr.R  old_optimizationFunctions.R
source/MIBRR/: CMakeLists.txt  DESCRIPTION  NAMESPACE  config.json
source/MIBRR/R/: 00_MibrrSamples.R  01_MibrrChain.R  01_MibrrFit.R  02_EstimationMethods.R  02_MibrrFit.R  RcppExports.R  control0.R  exportedHelperFunctions.R  exportedPrimaryFunctions.R  helperFunctions.R  infoFunctions.R  initControl.R  mibrr.R  subroutines.R  testMibrrClasses.R  testMibrrSamplers.R  unitTests.R
source/MIBRR/man/: MIBRR-package.Rd  MibrrFit-class.Rd  ben.Rd  bl.Rd  bvr.Rd  complete.Rd  getField.Rd  getImpData.Rd  getLambda.Rd  getParams.Rd  inspect.Rd  miben.Rd  mibl.Rd  mibrrExampleData.Rd  mibrrL.Rd  plotLambda.Rd  postPredict.Rd  ppCheck.Rd  predictData.Rd  predictMibrr.Rd  vanilla.Rd
source/MIBRR/src/: GIGrvg.c  Makevars.win  MibrrData.cpp  MibrrData.h  MibrrData.hpp  MibrrDefs.h  MibrrDefs.hpp  MibrrGibbs.cpp  MibrrGibbs.h  MibrrGibbs.hpp  MibrrRunGibbs.cpp  MibrrSamplers.cpp  MibrrSamplers.h  MibrrSamplers.hpp  README.md  RcppExports.cpp  gigSampler.cpp  gigTest  gigTest.cpp  main.cpp  runGibbs.cpp  testingFunctions.cpp
source/MIBRR/src/utils/: ioutils.h  parser.hpp
(+244 files in other folders)
